# app_links

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml  check.yml
migrations/: 20240818203040_create_links.sql
src/: apple-app-site-association.json  main.rs
src/crawler/: mod.rs
src/dao/: mod.rs
src/link_router/: mod.rs
src/management/: mod.rs
templates/: crawler_response.html
